make the default text color of code listings more accessible

--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -62,7 +62,7 @@ $text-strong: $grey-darker !default;
 
 // Code colors
 
-$code           : $red !default;
+$code           : darken($red, 15%) !default;
 $code-background: $background !default;
 
 $pre            : $text !default;
