--- a/sass/helpers/visibility.sass
+++ b/sass/helpers/visibility.sass
@@ -5,8 +5,14 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 @each $display in $displays
   .is-#{$display}
     display: #{$display} !important
+  +phone
+    .is-#{$display}-phone
+      display: #{$display} !important
   +mobile
     .is-#{$display}-mobile
+      display: #{$display} !important
+  +mobile-only
+    .is-#{$display}-mobile-only
       display: #{$display} !important
   +tablet
     .is-#{$display}-tablet
@@ -46,8 +52,16 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   white-space: nowrap !important
   width: 0.01em !important
 
++phone
+  .is-hidden-phone
+    display: none !important
+
 +mobile
   .is-hidden-mobile
+    display: none !important
+
++mobile-only
+  .is-hidden-mobile-only
     display: none !important
 
 +tablet
@@ -85,8 +99,16 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 .is-invisible
   visibility: hidden !important
 
++phone
+  .is-invisible-phone
+    visibility: hidden !important
+
 +mobile
   .is-invisible-mobile
+    visibility: hidden !important
+
++mobile-only
+  .is-invisible-mobile-only
     visibility: hidden !important
 
 +tablet
