--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -52,7 +52,8 @@ $block-spacing: 1.5rem !default
 
 // The container horizontal gap, which acts as the offset for breakpoints
 $gap: 32px !default
-// 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
+// 480, 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
+$mobile: 481px !default
 $tablet: 769px !default
 // 960px container + 4rem
 $desktop: 960px + (2 * $gap) !default
