--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -78,8 +78,16 @@
   @media screen and (max-width: $device - 1px)
     @content
 
+=phone
+  @media screen and (max-width: $mobile - 1px)
+    @content
+
 =mobile
   @media screen and (max-width: $tablet - 1px)
+    @content
+
+=mobile-only
+  @media screen and (min-width: $mobile) and (max-width: $tablet - 1px)
     @content
 
 =tablet
