--- a/sass/utilities/functions.sass
+++ b/sass/utilities/functions.sass
@@ -271,13 +271,17 @@ $hash_map: () !default
 
   @return $number
 
-//Pluggables for theming
+// Pluggables for theming
 
-$css_vars: null !default //If set only the list of those variables will be converted to css vars
-$exclude: () !default //If set this list of variables will not be converted to css vars
+// If set only the list of those variables will be converted to css vars
+$css_vars: null !default
+// If set this list of variables will not be converted to css vars
+$exclude: () !default 
 
-//Variables used internally only
-$bulma_default_vars: () !default //This can be set to provide a map of preregistered var
+// Variables used internally only
+
+// This can be set to provide a map of preregistered var
+$bulma_default_vars: () !default
 $bulma_registered_vars: $bulma_default_vars
 $bulma_used_vars: ()
 
