--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,6 +1,7 @@
 $card-color: $text !default
 $card-background-color: $scheme-main !default
 $card-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default
+$card-radius: 0 !default
 
 $card-header-background-color: transparent !default
 $card-header-color: $text-strong !default
@@ -23,6 +24,8 @@ $card-media-margin: $block-spacing !default
   color: $card-color
   max-width: 100%
   position: relative
+  border-radius: $card-radius
+  overflow: hidden
 
 .card-header
   background-color: $card-header-background-color
