--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
+/* Bulma Utilities */
 @-webkit-keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -230,6 +231,7 @@ fieldset[disabled] .pagination-ellipsis {
   cursor: not-allowed;
 }
 
+/* Bulma Base */
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
@@ -449,6 +451,7 @@ table th {
   color: #363636;
 }
 
+/* Bulma Elements */
 .box {
   background-color: white;
   border-radius: 6px;
@@ -3214,6 +3217,7 @@ a.tag:hover {
   vertical-align: top;
 }
 
+/* Bulma Form */
 .input, .textarea, .select select {
   background-color: white;
   border-color: #dbdbdb;
@@ -4496,6 +4500,7 @@ fieldset[disabled] .select select:hover {
   font-size: 1.5rem;
 }
 
+/* Bulma Components */
 .breadcrumb {
   font-size: 1rem;
   white-space: nowrap;
@@ -4593,6 +4598,8 @@ fieldset[disabled] .select select:hover {
   color: #4a4a4a;
   max-width: 100%;
   position: relative;
+  border-radius: 0;
+  overflow: hidden;
 }
 
 .card-header {
@@ -6922,6 +6929,7 @@ label.panel-block:hover {
   font-size: 1.5rem;
 }
 
+/* Bulma Grid */
 .column {
   display: block;
   flex-basis: 0;
@@ -8810,6 +8818,7 @@ label.panel-block:hover {
   }
 }
 
+/* Bulma Helpers */
 .has-text-white {
   color: white !important;
 }
@@ -10425,6 +10434,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   }
 }
 
+/* Bulma Layout */
 .hero {
   align-items: stretch;
   display: flex;
