refactor: split out responsiveness mixins
This allow to make the grid be usable as standalone element by just
including

@import "utilities/initial-variables";
@import "utilities/mixins-responsiveness";
@import "grid/columns";

--- a/sass/utilities/_all.sass
+++ b/sass/utilities/_all.sass
@@ -6,4 +6,5 @@
 @import "derived-variables.scss"
 @import "animations.sass"
 @import "mixins.sass"
+@import "mixins-responsiveness.sass"
 @import "controls.sass"
