--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -5,6 +5,7 @@ $card-radius: 0 !default
 $card-shadow-wide: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1) !default
 $card-shadow-slim: 0 0px 0 1px rgba($scheme-invert, 0.02) !default
 $card-shadow: $card-shadow-wide, $card-shadow-slim !default
+$card-shadow-inset: inset $card-shadow-wide, inset $card-shadow-slim !default
 
 $card-header-background-color: transparent !default
 $card-header-color: $text-strong !default
