Add is-inset class to cards that invokes card-shadow-inset

--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -30,6 +30,8 @@ $card-media-margin: $block-spacing !default
   position: relative
   border-radius: $card-radius
   overflow: hidden
+  &.is-inset
+    box-shadow: $card-shadow-inset
 
 .card-header
   background-color: $card-header-background-color
