Mention is-inset in docs

--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -140,6 +140,9 @@ meta:
   <p>
     You can center the <code>card-header-title</code> by appending the <code>is-centered</code> modifier.
   </p>
+  <p>
+    You can add an inset shadow by appending the <code>is-inset</code> modifier.
+  </p>
 </div>
 
 <hr>
