--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -98,6 +98,19 @@ meta:
 </div>
 {% endcapture %}
 
+{% capture card_inset_example %}
+<div class="card is-inset">
+  <div class="card-content">
+    <p class="title">
+      This is an inset card.
+    </p>
+    <p class="content">
+      It appears to recede backwards, into the page.
+    </p>
+  </div>
+</div>
+{% endcapture %}
+
 <div class="content">
   <p>The <strong>card</strong> component comprises several elements that you can mix and match:</p>
   <ul>
@@ -140,6 +153,11 @@ meta:
   <p>
     You can center the <code>card-header-title</code> by appending the <code>is-centered</code> modifier.
   </p>
+</div>
+
+{% include elements/new-tag.html version="0.9.1" %}
+
+<div class="content">
   <p>
     You can add an inset shadow by appending the <code>is-inset</code> modifier.
   </p>
@@ -175,6 +193,17 @@ meta:
   </div>
   <div class="column highlight-full">
     {% highlight html %}{{card_title_example}}{% endhighlight %}
+  </div>
+</div>
+
+<hr>
+
+<div class="columns">
+  <div class="column is-one-third">
+    {{card_inset_example}}
+  </div>
+  <div class="column highlight-full">
+    {% highlight html %}{{card_inset_example}}{% endhighlight %}
   </div>
 </div>
 
