Update subtitle variables

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3089,7 +3089,7 @@ a.tag:hover {
 }
 
 .title:not(.is-spaced) + .subtitle {
-  margin-top: -1.25rem;
+  margin-top: var(--subtitle-negative-margin);
 }
 
 .title.is-1 {
@@ -3121,19 +3121,26 @@ a.tag:hover {
 }
 
 .subtitle {
-  color: var(--text, #4a4a4a);
-  font-size: var(--size-5, 1.25rem);
-  font-weight: var(--weight-normal, 400);
-  line-height: 1.25;
+  --subtitle-negative-margin: -1.25rem;
+  --subtitle-color: var(--text, #4a4a4a);
+  --subtitle-size: var(--size-5, 1.25rem);
+  --subtitle-weight: var(--weight-normal, 400);
+  --subtitle-line-height: 1.25;
+  --subtitle-strong-color: var(--text-strong, #363636);
+  --subtitle-strong-weight: var(--weight-semibold, 600);
+  color: var(--subtitle-color);
+  font-size: var(--subtitle-size);
+  font-weight: var(--subtitle-weight);
+  line-height: var(--subtitle-line-height);
 }
 
 .subtitle strong {
-  color: var(--text-strong, #363636);
-  font-weight: var(--weight-semibold, 600);
+  color: var(--subtitle-strong-color);
+  font-weight: var(--subtitle-strong-weight);
 }
 
 .subtitle:not(.is-spaced) + .title {
-  margin-top: -1.25rem;
+  margin-top: var(--subtitle-negative-margin);
 }
 
 .subtitle.is-1 {
